# SalesDashboard

./: .gitignore  README.md  pyproject.toml
3d/: stand.FCStd  stand.stl
src/home_dashboard/: home_dashboard.py
