[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "home-dashboard"
version = "0.1.0"
dependencies = [
    "matplotlib ~= 3.9.1",
    "pytz ~= 2024.1",
    "RPi.GPIO ~= 0.7.1",
    "rpi-lgpio ~= 0.6", 
    "spidev ~= 3.6",
    "squareup ~= 37.1.0.20240604",
    "waveshare-epaper ~= 1.3.0",
]
authors = [
    { name="Kyle Madlon", email="kmadlon@yahoo.com" },
]
description = "Display sales volume data for the Milk Pail on an e-ink display"
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
home-dashboard = "home_dashboard.home_dashboard:main"

[tool.setuptools.packages.find]
where = ["src"]